main menu spacing correction.

--- a/src/components/MainMenu/MainMenu.scss
+++ b/src/components/MainMenu/MainMenu.scss
@@ -8,6 +8,10 @@
     .right-menu {
         .menu-item {
             padding: 0 1.2rem;
+            
+            &:last-child {
+                padding-right: 0;
+            }
 
             &:not(:last-child) {
                 border-right: .1rem solid rgb(228, 228, 228);
